# django-simple-templates

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
simple_templates/: apps.py  middleware.py  tests.py  utils.py
simple_templates/templatetags/: simple_templates.py
test_project/: test-requirements.txt
test_project/test_project/: settings.py  urls.py
test_project/test_project/templates/: base.html  page.html
test_project/test_project/templates/ab/: page.html
test_project/test_project/templates/ab/page/: variation1.html
test_project/test_project/templates/ab/simple_templates/test1/: variation1.html
test_project/test_project/templates/ab/st/test1/: variation1.html
test_project/test_project/templates/ab_templates/page/: variation1.html
test_project/test_project/templates/ab_templates/simple_templates/test1/: variation1.html
test_project/test_project/templates/ab_templates/st/test1/: variation1.html
test_project/test_project/templates/simple_templates/: canonical.html  test1.html
test_project/test_project/templates/st/: test1.html
